// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render EspensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render EspensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $7,468,237.64
  </h1>
</div>
`;
